# junjo-server

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AUTH_UPDATE.md  CURRENT_PLAN.md  DOCKER_FIX.md  DOCKER_SETUP.md  DUCKDB_IMPLEMENTATION_REVIEW.md  LOGGING_MIGRATION_PLAN.md  NATIVE_SDK_MIGRATION_PLAN.md  NATIVE_SDK_MIGRATION_PLAN_V2.md  PHASE3_DYNAMIC_MODEL_FETCHING.md  PHASE3_TESTING_PLAN.md  PHASE4_OPENTELEMETRY_INSTRUMENTATION.md  PYTHON_BACKEND_HIGH_CONCURRENCY_DB_PATTERN.md  PYTHON_BACKEND_MIGRATION_0_Master.md  PYTHON_BACKEND_MIGRATION_10_DEPLOYMENT_CUTOVER.md  PYTHON_BACKEND_MIGRATION_1_BASE_FASTAPI.md  PYTHON_BACKEND_MIGRATION_2_SQLAlchemy_Alembic.md  PYTHON_BACKEND_MIGRATION_3_SESSION_COOKIE_AUTH.md  PYTHON_BACKEND_MIGRATION_4_PROTOBUF_GRPC.md  PYTHON_BACKEND_MIGRATION_5_API_KEY_MANAGEMENT.md  PYTHON_BACKEND_MIGRATION_6_DUCKDB_INTEGRATION.md  PYTHON_BACKEND_MIGRATION_7_LLM_PLAYGROUND.md  PYTHON_BACKEND_MIGRATION_7_OTEL_SPAN_INDEXING.md  PYTHON_BACKEND_MIGRATION_7a_LITELLM.md  PYTHON_BACKEND_MIGRATION_8_LLM_PLAYGROUND.md  PYTHON_BACKEND_MIGRATION_9_REMAINING_FEATURES.md  PYTHON_BACKEND_TESTING_STRATEGY.md  README.md  SECURITY_IMPLEMENTATION_PLAN.md  docker-compose.dev.yml  docker-compose.yml  goose_migrations_plan.md  ingestion-plan.md  jaeger-config.yml  json-schema-forwarding-plan.md  jwt_to_api_key_cache_migration.md  package-lock.json  (+5 more)
backend/: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  entrypoint.sh  go.mod  go.sum  main.go  pyproject.toml  sqlc.yml  test_gemini_simple.py
backend/api/: routes.go  services.go
backend/api/internal_auth/: grpc_api_key_auth.go
backend/api/llm/: controller.go  controller_test.go  handlers.go  model_fetcher.go  routes.go  schemas.go  services.go
backend/api/otel/: otel_spans_services.go  query_distinct_service_names.sql  query_nested_spans.sql  query_node_exceptions.sql  query_root_spans.sql  query_root_spans_filtered.sql  query_span.sql  query_spans_type_workflow.sql  query_workflow_lineage.sql  query_workflow_spans.sql
backend/api/otel_token/: controller.go  internal_grpc_auth.go  routes.go  schemas.go  services.go
backend/api_keys/: controller.go  repository.go  schema.go  services.go
backend/app/: grpc_server.py  main.py
backend/app/common/: audit.py  responses.py  utils.py
backend/app/config/: logger.py  settings.py
backend/app/db_duckdb/: README.md  db_config.py  models.py
backend/app/db_sqlite/: __init__.py  db_config.py
backend/auth/: controller.go  repository.go  schemas.go  services.go  util.go
backend/db/: db_init.go  query.sql  schema.sql
backend/db/api_keys/: query.sql  schema.sql
backend/db/migrations/: 00001_initial_schema.sql
backend/db/node_logs/: query.sql  schema.sql
backend/db/state/: query.sql  schema.sql
backend/db/users/: query.sql  schema.sql
backend/db/workflow_logs/: query.sql  schema.sql
backend/db/workflow_metadata/: query.sql  schema.sql
backend/db_duckdb/: duckdb_init.go  test_schema.sql
backend/db_duckdb/otel_spans/: query_nested_spans.sql  schema.sql  spans_schema.sql  state_patches_schema.sql
backend/db_gen/: db.go  models.go  query.sql.go
backend/ent/: client.go  ent.go  mutation.go  todo.go  todo_create.go  todo_delete.go  todo_query.go  todo_update.go
backend/ent/enttest/: enttest.go
backend/ent/hook/: hook.go
backend/ent/runtime/: runtime.go
backend/ent/todo/: where.go
backend/ingestion_client/: client.go
backend/jwks/: jwks.go
backend/logger/: grpc.go
backend/middleware/: auth.go  logger.go
backend/migrations/: env.py
backend/proto/: auth.proto  ingestion.proto  node_log.proto  span_data_container.proto  workflow_log.proto  workflow_metadata.proto  workflows.proto
backend/src/: main.ts
backend/src/auth/: auth.controller.ts  auth.service.ts
backend/telemetry/: jaeger_forwarder.go  node_log.go  otel_api_key_interceptor.go  otel_log_service.go  otel_metric_service.go  otel_span_processor.go  otel_trace_service.go  server.go  workflow.go  workflow_log.go  workflow_metadata.go
backend/tests/: IMPLEMENTATION_SUMMARY.md  SECURITY_FINDINGS.md  TEST_COVERAGE_PLAN.md  test_api_keys_repository.py  test_api_keys_router.py  test_api_keys_service.py  test_gemini_integration.py  test_llm_playground_models.py  test_llm_playground_router.py  test_llm_playground_schemas.py  test_llm_playground_service.py
backend/user_db/: api-key-db.example.json
backend/utils/: custom_validator.go
backend_python/: .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
backend_python/app/: grpc_server.py  main.py
backend_python/migrations/: env.py
backend_python/scripts/: generate_proto.sh
backend_python/tests/: conftest.py  test_api_keys_repository.py  test_api_keys_router.py  test_api_keys_service.py  test_database.py  test_llm_playground_schemas.py  test_llm_playground_service.py  test_main.py
(+436 files in other folders)
